--- a/fronted/Crawler/package.json
+++ b/fronted/Crawler/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "animate.css": "^4.1.1",
     "axios": "^1.13.2",
-    "vue": "^3.5.24"
+    "element-plus": "^2.12.0",
+    "tailwindcss": "^4.1.17",
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
