--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
     "multer": "^2.0.2",
@@ -40,6 +41,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "svg-captcha": "^1.4.0",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
