--- a/fronted/Crawler/package.json
+++ b/fronted/Crawler/package.json
@@ -13,11 +13,14 @@
     "animate.css": "^4.1.1",
     "axios": "^1.13.2",
     "element-plus": "^2.12.0",
+    "pinia": "^3.0.4",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.416",
+    "@iconify/tailwind4": "^1.2.0",
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
