--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -26,12 +26,14 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/serve-static": "^5.0.4",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
+    "crawlee": "^3.15.3",
     "dotenv": "^17.2.3",
     "ioredis": "^5.8.2",
     "multer": "^2.0.2",
@@ -39,6 +41,7 @@
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "playwright": "^1.57.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
