--- a/fronted/Crawler/package.json
+++ b/fronted/Crawler/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@vue-flow/core": "^1.48.0",
     "animate.css": "^4.1.1",
     "axios": "^1.13.2",
     "element-plus": "^2.12.0",
