--- a/fronted/Crawler/package.json
+++ b/fronted/Crawler/package.json
@@ -13,6 +13,7 @@
     "@vue-flow/core": "^1.48.0",
     "animate.css": "^4.1.1",
     "axios": "^1.13.2",
+    "cropperjs": "^1.6.2",
     "element-plus": "^2.12.0",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.17",
