--- a/fronted/Crawler/package.json
+++ b/fronted/Crawler/package.json
@@ -16,6 +16,7 @@
     "cropperjs": "^1.6.2",
     "element-plus": "^2.12.0",
     "pinia": "^3.0.4",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
