--- a/backend/crawler/package.json
+++ b/backend/crawler/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.2",
     "@nestjs/mapped-types": "*",
@@ -28,8 +29,13 @@
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/platform-socket.io": "^11.1.10",
     "@nestjs/serve-static": "^5.0.4",
+    "@nestjs/swagger": "^11.2.4",
+    "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.1.10",
+    "archiver": "^7.0.1",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
@@ -48,6 +54,8 @@
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.3",
     "svg-captcha": "^1.4.0",
+    "swagger-ui-express": "^5.0.1",
+    "turndown": "^7.2.2",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
@@ -56,6 +64,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/archiver": "^6.0.4",
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
